spacing and footer issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1227,7 +1227,7 @@ ul.nav-footer li {
     list-style: none;
     font-style: normal;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 200%;
 }
 
